// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`function_expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(function() {}).length
typeof (function() {});
export default (function() {})();
(function() {})()\`\`;
(function() {})\`\`;
new (function() {});
(function() {});
a = function f() {} || b;
(function() {} && a);
a + function() {};
new function() {};

=====================================output=====================================
(function () {}).length;
typeof function () {};
export default (function () {})();
(function () {})()\`\`;
(function () {})\`\`;
new (function () {})();
(function () {});
a = function f() {} || b;
(function () {}) && a;
a + function () {};
new (function () {})();

================================================================================
`;

exports[`iife.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
  (// leading 1
  function () {})(),
  (// leading 2
  function () {})?.(),
  (/*block 1*/
  function () {})(),
  (function () {}
  // trialing 1
  )(),
  (function () {}
  // block 2
  )(),
  (// prettier-ignore
  function () {      })(),
  (function () {}/* trialing 2 */)(),
  (// tagged
  function () {      })\`\`,
  (// prettier-ignore
  function () {      })\`\`,


  (// leading 1
  () => {})(),
  (// leading 2
  () => {})?.(),
  (/*block 1*/
  () => {})(),
  (() => {}
  // trialing 1
  )(),
  (// tagged
  () => {})\`\`,
  (// prettier-ignore
  () => {      })\`\`,

  ((/*dangling 1*/) =>{})(),
  ( () => {}/* trialing 2 */)(),

  (/* not a comment for function */function() {}()),
]

=====================================output=====================================
[
  (
    // leading 1
    function () {}
  )(),
  (
    // leading 2
    function () {}
  )?.(),
  (/*block 1*/ function () {})(),
  (
    function () {}
    // trialing 1
  )(),
  (
    function () {}
    // block 2
  )(),
  (
    // prettier-ignore
    function () {      }
  )(),
  (function () {} /* trialing 2 */)(),
  (
    // tagged
    function () {}
  )\`\`,
  (
    // prettier-ignore
    function () {      }
  )\`\`,

  (
    // leading 1
    () => {}
  )(),
  (
    // leading 2
    () => {}
  )?.(),
  (/*block 1*/ () => {})(),
  (
    () => {}
    // trialing 1
  )(),
  (
    // tagged
    () => {}
  )\`\`,
  (
    // prettier-ignore
    () => {      }
  )\`\`,

  ((/*dangling 1*/) => {})(),
  (() => {} /* trialing 2 */)(),

  /* not a comment for function */ (function () {})(),
];

================================================================================
`;

exports[`issue-10277.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(fold => fold)(fmap => algebra => function doFold(v) {return algebra(fmap(doFold)(v))})

=====================================output=====================================
((fold) => fold)(
  (fmap) => (algebra) =>
    function doFold(v) {
      return algebra(fmap(doFold)(v));
    },
);

================================================================================
`;

exports[`issue-12967.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a = (
/**
 * @param {number} a
 * @param {number} b
 */
(a, b) => { // <-- in editor hints apply the types to a and b
  console.log(a + b);
}
)()

=====================================output=====================================
a = (
  /**
   * @param {number} a
   * @param {number} b
   */
  (a, b) => {
    // <-- in editor hints apply the types to a and b
    console.log(a + b);
  }
)();

================================================================================
`;
